<resources>
    <string name="app_name">CSIS_2023</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="app_logo_image">app_logo_image</string>
    <string name="email">email</string>
    <string name="full_name">Full Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">name</string>
    <string name="star_rating">Star Rating</string>
    <string name="profile">profile</string>
    <string name="fish_caught">Fish Caught:</string>
    <string name="locations_saved">Locations Saved:</string>
    <string name="home">Home</string>
    <string name="Profile">Profile</string>
    <string name="_0">0</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="scrollable_container_for_coordinate_data">Scrollable container for coordinate data</string>
    <string name="logout">Logout</string>
    <string name="view_details">View Details</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>