<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoordinateActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="410dp"
            android:layout_height="55dp"
            android:background="#007A7171"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/backBtnCoords"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addBtnCoords"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:backgroundTint="#003C69DC"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textColorHint="#00D71D1D"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="412dp"
            android:layout_height="654dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/scrollable_container_for_coordinate_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <LinearLayout
                android:id="@+id/coordsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/locationHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The following are fishing locations added to our database:"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/locationImage"
                        android:layout_width="222dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/locationName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="LOCATION NAME"
                            android:textColor="#000000"
                            android:textSize="24sp"
                            app:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/locationCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Nearest City: "
                            android:textColor="#000000"
                            android:textSize="20sp"
                            app:autoSizeTextType="uniform" />

                        <TextView
                            android:id="@+id/locationDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Nestled deep in the heart of the forest, lies a tranquil fishing spot. The water is crystal clear and shimmering in the sunlight, providing a perfect reflection of the trees and clouds above."
                            android:textColor="#000000"
                            android:textSize="8sp"
                            app:autoSizeTextType="uniform" />

                        <Button
                            android:id="@+id/locationPageButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Go to Location Page"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>